# 2501

./: .gitignore  pyproject.toml
scripts/: config.json  encode_data.py  generate.py  train.py  train_bpe.py  utils.py
tests/: adapters.py
